# cpp-Code-Coverage

./: .gitignore  Jenkinsfile
Cpp/: CMakeLists.txt  gcovr.cfg
Cpp/online-shopping-system/: .gitignore  README.md
Cpp/online-shopping-system/Client/: clientProgram.cpp  myHeader.h
Cpp/online-shopping-system/Client/Headers/: Admin.cpp  Admin.h  Cash.h  Client.cpp  Client.h  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Goods.h  Person.cpp  Person.h
Cpp/online-shopping-system/Server/: myHeader.h  serverProgram.cpp
Cpp/online-shopping-system/Server/Headers/: Admin.cpp  Admin.h  Cash.cpp  Cash.h  Complaint_Base.cpp  Complaint_Base.h  Complaint_C.h  Complaint_E.cpp  Complaint_E.h  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Goods.h  Person.cpp  Person.h  Server.cpp  Server.h  Thread.cpp  Thread.h  test_hooks.h
Cpp/scripts/: run_coverage.ps1
Cpp/test/: CMakeLists.txt  mock_thread.hpp  test_admin_employee.cpp  test_complaint.cpp  test_person_flows.cpp  test_server_thread.cpp  test_thread_smoke.cpp
Java/JavaFullstackEcommerce/: pom.xml  sonar-project.properties
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/: SportscenterApplicationTests.java
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/config/: CorsConfigTest.java  MyConfigTest.java
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/controller/: AuthControllerTest.java  BasketControllerTest.java  ProductControllerTest.java
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/exceptions/: CustomExceptionHandlerTest.java  ProductNotFoundExceptionTest.java
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/security/: JwtAuthenticationEntryPointTest.java  JwtAuthenticationFilterTest.java  JwtHelperTest.java
Java/JavaFullstackEcommerce/src/test/java/com/ecoomerce/sportscenter/service/: BasketServiceImplTest.java  BrandServiceImplTest.java  ProductServiceImplTest.java  TypeServiceImplTest.java
Java/JavaFullstackEcommerce/src/test/resources/: application-test.yaml
parser/: parser.py
